--- a/src/app/tshirt-overlay/tshirt-overlay.component.html
+++ b/src/app/tshirt-overlay/tshirt-overlay.component.html
@@ -2,7 +2,7 @@
   <video #videoElement class="video-feed" autoplay></video>
   <canvas #canvasElement class="overlay-canvas"></canvas>
   <canvas #debugCanvas class="debug-canvas"></canvas>
-  <canvas id="debug-info"></canvas>
+  <!-- <canvas id="debug-info"></canvas> -->
 </div>
 <div class="controls">
   <input
